--- a/template/template.css
+++ b/template/template.css
@@ -1,5 +1,9 @@
 /* import 区 */
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700;800&display=swap');
+
 /* 字体区 */
 @font-face {
     font-family: "YanSong";
@@ -25,53 +29,6 @@
     src: url("https://fantasyguide.cn/fonts/FOT-LYRA_STD_DB.OTF") format("opentype");
 }
 
-@font-face {
-    font-family: "Kaisei";
-    src: url("https://fantasyguide.cn/fonts/KAISEITOKUMIN-REGULAR.TTF") format("truetype");
-}
-
-@font-face {
-    font-family: "Noto Serif SC";
-    src: url("https://fantasyguide.cn/fonts/SourceHanSerifSC-ExtraLight.otf") format("opentype");
-    font-weight: 200;
-}
-
-@font-face {
-    font-family: "Noto Serif SC";
-    src: url("https://fantasyguide.cn/fonts/SourceHanSerifSC-Light.otf") format("opentype");
-    font-weight: 300;
-}
-
-@font-face {
-    font-family: "Noto Serif SC";
-    src: url("https://fantasyguide.cn/fonts/SourceHanSerifSC-Regular.otf") format("opentype");
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: "Noto Serif SC";
-    src: url("https://fantasyguide.cn/fonts/SourceHanSerifSC-Medium.otf") format("opentype");
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: "Noto Serif SC";
-    src: url("https://fantasyguide.cn/fonts/SourceHanSerifSC-SemiBold.otf") format("opentype");
-    font-weight: 600;
-}
-
-@font-face {
-    font-family: "Noto Serif SC";
-    src: url("https://fantasyguide.cn/fonts/SourceHanSerifSC-Bold.otf") format("opentype");
-    font-weight: 700;
-}
-
-@font-face {
-    font-family: "Noto Serif SC";
-    src: url("https://fantasyguide.cn/fonts/SourceHanSerifSC-Heavy.otf") format("opentype");
-    font-weight: 900;
-}
-
 
 /*
 ==============================
@@ -80,6 +37,7 @@
 Copy from http://etinjat.wikidot.com/typeface-cn
 ==============================
 */
+
 @font-face { font-family:'LXGW WenKai'; 
     font-style: normal; font-display: swap;
     src: url('https://fastly.jsdelivr.net/gh/Etinjat/Fonts@main/FONT_LXGWWenKaiMono-Regular.woff2') format('woff2');
@@ -220,7 +178,7 @@ button:hover {
     margin-block: 0;
     text-shadow: 0 0 4px rgb(255,255,255);
     filter: drop-shadow(0px 0px 3px white);
-    font-family: 'Kaisei', Arial, Helvetica, sans-serif;
+    font-family: "Kaisei Tokumin", Arial, Helvetica, sans-serif;
     color: black;
 }
 
@@ -942,7 +900,7 @@ ul.about_link {
 .powered_by {
     display:flex;
     align-items:center;
-    font-family: 'Kaisei', Arial, Helvetica, sans-serif;
+    font-family: "Kaisei Tokumin", Arial, Helvetica, sans-serif;
     font-weight: bold;
     justify-content: center;
 }
