--- a/template/template.html
+++ b/template/template.html
@@ -19,19 +19,13 @@
         <!-- <link rel="stylesheet" href="/template/newyear.css"> -->
         <link rel="stylesheet" href="/template/normal.css">
         <link rel="stylesheet" href="/template/abnormal.css">
-        <style>
-            html {
-                filter: grayscale(100%);
-            }
-        </style>
     </head>
     <body>
         <div id="container">
             <header id="header">
                 <div class="header_content">
                     <h1>幻想指南</h1>
-                    <!-- <h3 id="AQ">距離阿求的寿命完全枯竭，還有?天</h3> -->
-                    <h3 id="AQ">沈痛哀悼 幻想郷人民偉大的領導者 稗田阿求同志逝世</h3>
+                    <h3 id="AQ">距離阿求的寿命完全枯竭，還有?天</h3>
                 </div>
                 <div class="mobile_header">
                     <div id="open_menu" class="open_menu">
