--- a/template/template.html
+++ b/template/template.html
@@ -17,8 +17,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-webfont@1.1.0/style.css" />
         <link rel="manifest" href="/images/favicon/site.webmanifest">
         <!-- <link rel="stylesheet" href="/template/newyear.css"> -->
-        <link rel="stylesheet" href="/template/normal.css">
-        <link rel="stylesheet" href="/template/abnormal.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/template/normal.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/template/abnormal.css">
     </head>
     <body>
         <div id="container">
@@ -120,7 +120,7 @@
                                         <li><a href="/about/#what_is_pdot_studio"><span>P大点工作室</span></a></li>
                                     </ul>
                                     <div class="powered_by">
-                                        Powered by <img src="https://fantasyguide.cn/images/PStudio.png" alt = "Logo of the Studio (need to be confirm)">
+                                        Powered by <img src="https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/images/PStudio.png" alt = "Logo of the Studio (need to be confirm)">
                                     </div>
                                 </div>
                             </div>
@@ -256,16 +256,16 @@
     <script>
         if (Math.random() <= 0.01) {
             var header = document.getElementById('header');
-            header.style.backgroundImage = "url(https://fantasyguide.cn/images/touhouFantasyGuideLOGO_glitch.svg)";
+            header.style.backgroundImage = "url(https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/touhouFantasyGuideLOGO_glitch.svg)";
 
             $("<link>").attr({
                 rel:  "stylesheet",
                 type: "text/css",
-                href: "../template/etalpmet.css"
+                href: "https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/template/etalpmet.css"
             }).appendTo("head");
         }
     </script>
-    <script src="../template/template.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/template/template.js"></script>
     <script>
         // 暂      
         async function think() {
