--- a/template/template.html
+++ b/template/template.html
@@ -19,6 +19,9 @@
         <!-- <link rel="stylesheet" href="/template/newyear.css"> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/template/normal.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/template/abnormal.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Nipporita/fantasyguide_statics/template/particle.css">
+        <style>
+        </style>
     </head>
     <body>
         <div id="container">
@@ -133,6 +136,7 @@
             <div id="footer_wrap">
             </div>
             <div class="main_background"></div>
+            <div class="particle-container"></div>
         </div>
     </body>
     <script>
@@ -327,6 +331,43 @@
                 e.title = "切换至露娜"
                 setCookie("dark_theme", "light")
             }
+        }
+    </script>
+    <script>
+        const container = document.querySelector('.particle-container');
+
+        function createParticle() {
+            const particle = document.createElement('div');
+            particle.classList.add('particle');
+
+            const type = Math.floor(Math.random() * 3); // 0 - 2
+            particle.classList.add(`particle_rise_${type}`);
+
+            const size = Math.random() * 8 + 2; // 2px - 10px
+            const left = Math.random() * 100; // 0% - 100%
+            const bottom = Math.random() * -40 - 10; // -50% - -10%
+            const duration = Math.random() * 6 + 10; // 10s - 16s
+            const delay = Math.random() * 16; // 0s - 3s
+
+            particle.style.width = `${size}px`;
+            particle.style.height = `${size}px`;
+            particle.style.left = `${left}vw`;
+            particle.style.bottom = `${bottom}vh`;
+            particle.style.animationDuration = `${duration}s`;
+            particle.style.animationDelay = `${delay}s`;
+
+            container.appendChild(particle);
+
+            // 动画结束后删除粒子
+            setTimeout(() => {
+                particle.remove();
+                createParticle(); // 创建新的粒子
+            }, (duration + delay) * 1000);
+        }
+
+        // 生成多个粒子
+        for (let i = 0; i < 100; i++) {
+            createParticle();
         }
     </script>
 </html>
