抽签系统完全体（暂）

--- a/template/template.html
+++ b/template/template.html
@@ -30,58 +30,6 @@
                     <h1>幻想指南</h1>
                     <h3 id="AQ">距離阿求的寿命完全枯竭，還有?天</h3>
                 </div>
-                <div class="omikuji_wrap">
-                    <div class="omikuji_number_wrap">
-                        <div class="omikuji_number">
-                            <div id="omikuji_di" class="omikuji_hanzi omikuji_bangou">
-                                第
-                            </div>
-                            <div id="omikuji_num" class="omikuji_hanzi omikuji_bangou"></div>
-                            <div id="omikuji_fan" class="omikuji_hanzi omikuji_bangou">
-                                番
-                            </div>
-                            <div id="omikuji_yu" class="omikuji_hanzi omikuji_omikuji">
-                                御
-                            </div>
-                            <div id="omikuji_shen" class="omikuji_hanzi omikuji_omikuji">
-                                神
-                            </div>
-                            <div id="omikuji_qian" class="omikuji_hanzi omikuji_omikuji">
-                                籤
-                            </div>
-                        </div>
-                    </div>
-                    <div class="omikuji_content_wrap">
-                        <div class="omikuji_content_left_right_border_1">
-                            <div class="omikuji_content_left_right_border_2">
-                                <div class="omikuji_content_up_bottom_border_1">
-                                    <div class="omikuji_content_up_bottom_border_2">
-                                        <div id="omikuji_basic">
-                                            <div id="omikuji_bangou_wrap">
-                                                <div id="omikuji_bangou"></div>
-                                                <div id="omikuji_fortune"></div>
-                                            </div>
-                                            <div id="omikuji_name_wrap">
-                                                <div id="omikuji_title"></div>
-                                                <div id="omikuji_name"></div>
-                                                <div id="omikuji_ability"></div>
-                                            </div>
-                                        </div>
-                                        <div id="omikuji_poem">
-                                            <!-- ＫＯきざはし金陵Ｂ Bold -->
-                                        </div>
-                                        <hr>
-                                        <div id="omikuji_fortune_text">
-                                            <div id="omikuji_fortune_text_1"></div>
-                                            <hr>
-                                            <div id="omikuji_fortune_text_2"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="mobile_header">
                     <div id="open_menu" class="open_menu">
                         <a href="#main_side_bar">☰</a>
@@ -117,6 +65,60 @@
                     </ul>
                 </div>
             </header>
+            <div id="omikuji" class="omikuji_wrap">
+                <div class="omikuji_number_wrap">
+                    <div class="omikuji_number">
+                        <div id="omikuji_di" class="omikuji_hanzi omikuji_bangou">
+                            第
+                        </div>
+                        <div id="omikuji_num" class="omikuji_hanzi omikuji_bangou"></div>
+                        <div id="omikuji_fan" class="omikuji_hanzi omikuji_bangou">
+                            番
+                        </div>
+                        <div id="omikuji_yu" class="omikuji_hanzi omikuji_omikuji">
+                            御
+                        </div>
+                        <div id="omikuji_shen" class="omikuji_hanzi omikuji_omikuji">
+                            神
+                        </div>
+                        <div id="omikuji_qian" class="omikuji_hanzi omikuji_omikuji">
+                            籤
+                        </div>
+                    </div>
+                </div>
+                <div class="omikuji_content_wrap">
+                    <div class="omikuji_content_left_right_border_1">
+                        <div class="omikuji_content_left_right_border_2">
+                            <div class="omikuji_content_up_bottom_border_1">
+                                <div class="omikuji_content_up_bottom_border_2">
+                                    <div id="omikuji_basic">
+                                        <div id="omikuji_bangou_wrap">
+                                            <div id="omikuji_bangou"></div>
+                                            <div id="omikuji_fortune"></div>
+                                        </div>
+                                        <div id="omikuji_name_wrap">
+                                            <div id="omikuji_title"></div>
+                                            <div id="omikuji_name"></div>
+                                            <div id="omikuji_ability"></div>
+                                        </div>
+                                    </div>
+                                    <div id="omikuji_poem">
+                                        <!-- ＫＯきざはし金陵Ｂ Bold -->
+                                    </div>
+                                    <hr>
+                                    <div id="omikuji_fortune_text">
+                                        <div id="omikuji_fortune_text_1"></div>
+                                        <hr>
+                                        <div id="omikuji_fortune_text_2"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a id="omikuji_show" class="button" onclick="showOmikuji()"></a>
+                <a id="omikuji_hide" class="button" onclick="hideOmikuji()"></a>
+            </div>
             <div id="content_wrap">
                 <div id="main_side_bar">
                     <div class="fantasy_guide_div_1">
@@ -434,15 +436,77 @@
 
             omikujiNum.innerHTML = idx + 1;
             omikujiBangou.innerHTML = "<span class='omikuji_temp'>第</span>" + (idx + 1) + "<span class='omikuji_temp'>番</span>";
-            omikujiFortune.innerHTML = omikuji[0][1];
+
+            // handle 【大々凶】
+
+            var fortune = omikuji[0][1];
+            omikujiFortune.removeAttribute("style")
+            omikujiFortune.innerHTML = "";
+            if (typeof fortune === "object") {
+                omikujiFortune.innerHTML = `<span style="text-decoration: line-through double;">${fortune[0]}</span>${fortune[1]}`;
+                if ((fortune[0] + fortune[1]).length === 5) {
+                    omikujiFortune.style.letterSpacing = "-0.15em";
+                    omikujiFortune.style.fontSize = 4. / 5 * 2.6 + "vh";
+                }
+            } else if (fortune.includes("【")) {
+                var fortuneInner = document.createElement("div");
+                if (fortune.length == 4) fortuneInner.style.letterSpacing = "-0.05em";
+                fortuneInner.classList.add("omikuji_fortune_inner");
+                fortuneInner.innerHTML = fortune;
+                omikujiFortune.appendChild(fortuneInner);
+            } else if (fortune.length == 4) {
+                var scale = 1.3;
+                omikujiFortune.style.letterSpacing = "-0.05em";
+                omikujiFortune.style.fontSize = 2.7 / scale + "vh";
+                omikujiFortune.style.transform = "scale(1," + scale + ")";
+                omikujiFortune.innerHTML = fortune;
+            } else if (fortune.length >= 5) {
+                omikujiFortune.style.letterSpacing = "-0.15em";
+                omikujiFortune.style.fontSize = 4. / fortune.length * 2.6 + "vh";
+                omikujiFortune.innerHTML = fortune;
+            } else {
+                omikujiFortune.innerHTML = fortune;
+            }
+
             omikujiTitle.innerHTML = omikuji[1][0];
-            omikujiName.innerHTML = omikuji[1][1];
-            omikujiAbility.innerHTML = omikuji[1][2];
+
+            var name = omikuji[1][1];
+            omikujiName.removeAttribute("style")
+            if (typeof name === "object") {
+                // 去掉name[1]的左右括号
+                name[1] = name[1].replace(/^（|）$/g, '');
+                omikujiName.innerHTML = `${name[0]}<span style="margin: 0 -0.5em; display: flex">（<span style="font-size: 1.15vh;">${name[1]}</span>）</span>`;
+                if ((name[0]+name[1]).length >= 7) {
+                    omikujiName.style.letterSpacing = "-0.2vh";
+                }
+            } else if (name.length <= 7) {
+                omikujiName.innerHTML = name;
+            } else if (name.length == 8) {
+                omikujiName.style.letterSpacing = "-0.2vh";
+                omikujiName.innerHTML = name;
+            } else {
+                omikujiName.style.letterSpacing = "-0.3vh";
+                omikujiName.style.fontSize = 9. / name.length * 2.3 + "vh";
+                omikujiName.style.transform = "scale(1," + name.length / 9. + ")";
+                omikujiName.innerHTML = name;
+            }
+            
+            var ability = omikuji[1][2];
+            if (typeof ability === "object") {
+                omikujiAbility.innerHTML = `${ability[0]}<span style="font-size: 0.7vh;">${ability[1]}</span>`;
+            } else {
+                omikujiAbility.innerHTML = ability;
+            }
+
+            omikujiPoem.innerHTML = ""
+            omikujiFortuneText1.innerHTML = ""
+            omikujiFortuneText2.innerHTML = ""
 
             if (omikuji.length === 2) return;
 
             // join,把'\n'换成'<br>'
             omikujiPoem.innerHTML = omikuji[2].filter((s) => {return s!=='\n'}).join('<br>')
+            
 
             if (omikuji.length === 3) return;
             loadFortuneText(omikujiFortuneText1, omikuji[3]);
@@ -452,6 +516,7 @@
         }
 
         function loadFortuneText(e, data) {
+            e.innerHTML = "";
             for (var i = 0; i < data.length; i++) {
                 var fortuneText = document.createElement("div");
                 fortuneText.classList.add("omikuji_inner_text");
@@ -464,6 +529,26 @@
 
                 e.appendChild(fortuneText);
             }
+        }
+
+        function showOmikuji() {
+            var omikuji = document.getElementById("omikuji");
+            var omikujiShow = document.getElementById("omikuji_show");
+            var omikujiHide = document.getElementById("omikuji_hide");
+
+            omikuji.classList.add("show");
+            omikujiShow.style.display = "none";
+            omikujiHide.style.display = "block";
+        }
+
+        function hideOmikuji() {
+            var omikuji = document.getElementById("omikuji");
+            var omikujiShow = document.getElementById("omikuji_show");
+            var omikujiHide = document.getElementById("omikuji_hide");
+
+            omikuji.classList.remove("show");
+            omikujiShow.style.display = "block";
+            omikujiHide.style.display = "none";
         }
 
     </script>
