--- a/template/template.css
+++ b/template/template.css
@@ -234,19 +234,21 @@ button:hover {
 
 .omikuji_wrap {
     display: block;
-    position: fixed;
+    position: absolute;
     display: flex;
-    top: -68vh;
-    aspect-ratio: 1 / 3.1415926;
+    top: calc(-68vh + 140rem / 16 + 30px);
+    /* aspect-ratio: 1 / 3.1415926; */
+    width: calc(70vh / 3.1415926);
     height: 70vh;
     background: white;
     right: 20%;
     z-index: 1000;
-    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.8);
+    box-shadow: 0px 0px 4px 2px rgba(0,0,0,1);
     flex-direction: column;
     font-size: 0.9vh;
     /* background: linear-gradient(0deg, red, white, red, white, red, white, red); */
-    transition: top 0.5s ease-in-out 0.3s;
+    transition: top 0.5s ease-in-out;
+    z-index: 2;
 }
 
 /* 登录框定义 */
@@ -1380,6 +1382,11 @@ div.fantasy_guide_div_1 {
         --image-mask: linear-gradient(90deg, transparent 0%, rgba(0,0,0,0.1) 33%, black);;
         right: calc(-1px + 140rem / 16 / 2 + 0.667px);
     }
+
+    .omikuji_wrap {
+        right: calc(50vw - 70vh / 3.1415926 / 2);
+        top: calc(-68vh + 140rem / 16 + 20px);
+    }
 }
 
 
@@ -1534,8 +1541,6 @@ div#omikuji_ability {
     display: flex;
     justify-content: center;
     font-family: 'YuMincho';
-    line-height: 1.3;
-    font-size: 1vh;
 }
 
 div#omikuji_poem {
@@ -1552,6 +1557,7 @@ div#omikuji_poem {
     font-weight: bold;
     font-size: 2vh;
     justify-content: flex-start;
+    white-space: nowrap;
 }
 
 div#omikuji_fortune_text_1, div#omikuji_fortune_text_2 {
@@ -1561,6 +1567,7 @@ div#omikuji_fortune_text_1, div#omikuji_fortune_text_2 {
     height: 50%;
     width: 95%;
     padding: 0.8vh 0;
+    margin: 0 -10vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1578,10 +1585,13 @@ div#omikuji_fortune_text {
 
 div#omikuji_name {
     font-size: 2.3vh;
+    line-height: calc(1.3* 2.3vh);
 }
 
 div#omikuji_title {
     padding-top: 0.8vh;
+    line-height: calc(1.3* 1vh);
+    font-size: 1vh;
 }
 
 #omikuji_bangou_wrap > div {
@@ -1598,13 +1608,15 @@ div#omikuji_bangou {
     border-right: var(--border-thin);
     min-width: 50%;
     flex-grow: 1.5;
+    font-size: 2.4vh;
+    height: 70%;
 }
 
 .omikuji_inner_text {
     font-size: 1.0vh;
     text-indent: -3em;
     padding-top: 3em;
-    line-height: 1.5;
+    line-height: 1.3vh;
 }
 
 .omikuji_wrap hr {
@@ -1619,7 +1631,38 @@ span.omikuji_temp {
     font-size: 0.6em;
 }
 
-.omikuji_wrap:hover, .omikuji_wrap:focus {
-    top: 0;
+.omikuji_wrap.show {
+    top: calc(140rem / 16 + 25px);
     transition: top 0.5s ease-in-out;
+}
+
+a#omikuji_show {
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    top: 0;
+}
+
+a#omikuji_hide {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.omikuji_fortune_inner {
+    font-size: 0.7em;
+    letter-spacing: -0.18em;
+    transform: scale(2) rotate(-6deg);
+}
+
+div#omikuji_ability {
+    line-height: calc(0.7* 1vh);
+    font-size: 0.8vh;
+}
+
+div#omikuji_fortune {
+    line-height: calc(1.7 * 2.7vh);
 }
