--- a/template/template.css
+++ b/template/template.css
@@ -234,7 +234,7 @@ button:hover {
 
 .omikuji_wrap {
     display: block;
-    position: absolute;
+    position: fixed;
     display: flex;
     top: calc(-68vh + 140rem / 16 + 30px);
     /* aspect-ratio: 1 / 3.1415926; */
@@ -1384,8 +1384,10 @@ div.fantasy_guide_div_1 {
     }
 
     .omikuji_wrap {
-        right: calc(50vw - 70vh / 3.1415926 / 2);
-        top: calc(-68vh + 140rem / 16 + 20px);
+        
+right: calc(50vw - 70vh / 3.1415926 / 2);
+        
+top: calc(-68vh + 140rem / 16 + 20px);
     }
 }
 
