--- a/template/template.html
+++ b/template/template.html
@@ -116,8 +116,8 @@
                         </div>
                     </div>
                 </div>
-                <a id="omikuji_show" class="button" onclick="showOmikuji()"></a>
-                <a id="omikuji_hide" class="button" onclick="hideOmikuji()"></a>
+                <a id="omikuji_show" class="button" onclick="showOmikuji()" style="display:block;"></a>
+                <a id="omikuji_hide" class="button" onclick="hideOmikuji()" style="display:none;"></a>
             </div>
             <div id="content_wrap">
                 <div id="main_side_bar">
